@@ -25,7 +25,10 @@ MAIN_CLASS="@MAIN_CLASS@"
 
 DEFAULT_JVM_OPTS="-Dfile.encoding=UTF-8 \
     --add-opens=java.base/java.lang=ALL-UNNAMED \
+    --enable-native-access=ALL-UNNAMED \
     -Xmx256m \
+    -XX:TieredStopAtLevel=1 \
+    -XX:+UseSerialGC \
     -XX:+HeapDumpOnOutOfMemoryError \
     -XX:+ExitOnOutOfMemoryError \
     -XX:HeapDumpPath=${LOG_DIR}"
